test/files/neg/t7187-2.13.check
t7187-2.13.scala:3: error: type mismatch;
 found   : String
 required: () => Any
  val f: () => Any = foo   // error (not eta-expanded)
                     ^
t7187-2.13.scala:5: error: type mismatch;
 found   : String
 required: () => ?
  val h = foo _            // error (not eta-expanded)
          ^
two errors found
